src/app/app.component.scss
@import '../variables';

.navigation {
  display: flex;
  height: 100%;
  margin: 0 0 0 48px;
  align-items: center;

  &__item {
    font-size: 16px;
    font-weight: 400;
    color: #666;
    text-decoration: none;
    padding: 0 12px;

    &.active {
      color: map-get($app-primary, 300);
    }
  }
}

.sell-data-btn {
  margin: 0 0 0 12px;
  padding: 0 8px 0 16px;
  text-transform: uppercase;
}

.sidenav-container {
  flex: 1;
}

.sidenav {
  width: 200px;

  .mat-nav-list {
    margin: 48px 0 24px 0;
  }

  .active-route {
    color: map-get($app-primary, 300);
    background: linear-gradient(45deg, map-get($app-primary, 50), transparent);
  }

  &__menu-item {
    padding: 0 32px;
  }
}

.logotype {
  display: flex;
  align-items: center;
  text-decoration: none;

  &__text {
    color: #000;
    margin: 0 0 0 12px;
    text-transform: uppercase;
  }

  &__beta-text {
    margin: 0 0 0 8px;
    font-size: 10px;
    line-height: 13px;
    text-transform: uppercase;
    color: #fff;
    padding: 4px 10px;
    background-color: map-get($app-accent, 400);
    border-radius: 20px;
  }
}

.mat-toolbar {
  background-color: #fff;
  border-bottom: solid 1px #e4e4e4;
}

.mat-drawer {
  background-color: #fafafa;
}

.toolbar-spacer {
  flex: 1 1 auto;
}

.app-view {
  padding: 20px;
  overflow: auto;

  &__container {
    max-width: 1600px;
    margin: 0 auto;
  }
}

